--- a/pilz_robots/prbt_support/config/manipulator_controller.yaml
+++ b/pilz_robots/prbt_support/config/manipulator_controller.yaml
@@ -58,20 +58,20 @@ manipulator_joint_trajectory_controller:
   required_drive_mode: 7
   limits:
       prbt_joint_1:
-        has_acceleration_limits: false
+        has_acceleration_limits: true
         max_acceleration: 6.0
       prbt_joint_2:
-        has_acceleration_limits: false
+        has_acceleration_limits: true
         max_acceleration: 6.0
       prbt_joint_3:
-        has_acceleration_limits: false
+        has_acceleration_limits: true
         max_acceleration: 6.0
       prbt_joint_4:
-        has_acceleration_limits: false
+        has_acceleration_limits: true
         max_acceleration: 6.0
       prbt_joint_5:
-        has_acceleration_limits: false
+        has_acceleration_limits: true
         max_acceleration: 6.0
       prbt_joint_6:
-        has_acceleration_limits: false
+        has_acceleration_limits: true
         max_acceleration: 6.0
